--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,48 @@
 @import url(https://fonts.googleapis.com);
 @import url(https://fonts.gstatic.com);
 @import url(https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap);
+body {
+  background-color: #ffffff;
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
+}
+
+.main-nav, .contacts-list, .products-view, .card-set--products, .social-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main-nav__link, .contacts-list__link, .logo, .product {
+  text-decoration: none;
+}
+
+.header__nav, .main-nav,
+.contacts-list--vertical, .products-view, .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer__text,
+.sub-form__text {
+  display: block;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -280,36 +322,6 @@ summary {
   padding-left: 15px;
 }
 
-body {
-  background-color: #ffffff;
-  color: #757575;
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 0.03em;
-}
-
-.main-nav, .contacts-list, .products-view, .card-set--products, .social-list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.main-nav__link, .contacts-list__link, .logo {
-  text-decoration: none;
-}
-
-.header__nav, .main-nav,
-.contacts-list--vertical, .products-view, .social-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -404,6 +416,11 @@ body {
   color: #2196f3;
 }
 
+.footer__logo {
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -426,13 +443,6 @@ body {
   border: 1px solid transparent;
   border-radius: 4px;
   font-family: inherit;
-}
-
-.button--primary, .button__button:hover, .button__button:focus {
-  color: #ffffff;
-  background-color: #2196f3;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button--secondary {
@@ -549,8 +559,7 @@ body {
   margin-right: 10px;
 }
 
-.social-list__item:last-child,
-.clients-list__item:last-child {
+.social-list__item:last-child {
   margin-right: 0;
 }
 
@@ -564,6 +573,15 @@ body {
 
 .social-link__icon {
   fill: #afb1b8;
+}
+
+.social-link--dark {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-link__icon--dark {
+  background-color: transparent;
+  fill: #ffffff;
 }
 
 .social-link:hover,
@@ -594,9 +612,8 @@ body {
   margin-right: 70px;
 }
 
-.footer__logo {
-  color: #ffffff;
-  margin-bottom: 20px;
+.footer__join-us {
+  margin-right: 93px;
 }
 
 .contacts-list__item--vertical {
@@ -625,36 +642,6 @@ body {
 
 .contacts-list__link--last {
   margin-bottom: 0;
-}
-
-.footer__join-us {
-  margin-right: 93px;
-}
-
-.footer__text,
-.sub-form__text {
-  display: block;
-  margin-bottom: 20px;
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.social-link--dark {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.social-link__icon--dark {
-  background-color: transparent;
-  fill: #ffffff;
-}
-
-.join-us .social-links .link:hover,
-.join-us .social-links .link:focus {
-  background-color: #2196f3;
 }
 
 .sub-form {
@@ -761,6 +748,15 @@ a {
   transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1), -webkit-box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
+.button--primary,
+.products__button:hover,
+.products__button:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .social-link,
 .button--secondary {
   -webkit-transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
@@ -772,48 +768,5 @@ a {
 .social-link__icon {
   -webkit-transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
   transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
-}
-
-.our-team__section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: #f5f4fa;
-}
-
-.member-card {
-  display: block;
-  width: calc((100% - 3 * 30px) / 4);
-  margin-right: 30px;
-}
-
-.member-card__descr {
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.member-card__title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  color: #212121;
-}
-
-.member-card__text {
-  margin-top: 0;
-  margin-bottom: 16px;
-  font-size: 16px;
-  line-height: 1.19;
-}
-
-.member-card {
-  display: block;
-  border-radius: 4px;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: #ffffff;
 }
 /*# sourceMappingURL=portfolio.css.map */
