--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -25,3 +25,16 @@ body {
 %icon-animation {
   transition: fill 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
+
+%call-to-act {
+  display: block;
+  margin-bottom: 20px;
+
+  color: $lighter;
+
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
