--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -8,6 +8,15 @@ a {
   transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
+.button--primary,
+.products__button:hover,
+.products__button:focus {
+  color: $lighter;
+  background-color: $accent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .social-link,
 .button--secondary {
   transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
