--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/placeholders';
 @import './base/normalize';
 @import './base/visually_hidden';
 @import './components/container';
@@ -10,5 +11,3 @@
 @import './components/social_box';
 @import './components/footer';
 @import './components/animations';
-// flex centers was there - check
-@import './components/our_team';
