--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -5,7 +5,7 @@ a {
 
 .product,
 .button--secondary {
-  transition: box-shadow 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
+  transition: box-shadow, background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
 .button--primary,
@@ -17,8 +17,7 @@ a {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.social-link,
-.button--secondary {
+.social-link {
   transition: background 250ms cubic-bezier(0.1, 0.7, 1, 0.1);
 }
 
