--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -59,70 +59,74 @@
 
 .sub-form {
   min-width: 570px;
+
+  &__field {
+    display: inline-block;
+  }
+
+  &__input {
+    display: block;
+    height: 50px;
+    width: 358px;
+    margin-right: 12px;
+    padding: 15px 15px;
+    outline: none;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background: transparent;
+
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+
+    color: $footer-lighter-60;
+
+    &::placeholder {
+      color: $footer-lighter-60;
+    }
+  }
+
+  &__label {
+    visibility: none;
+
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+  }
 }
 
-.sub-form__field {
-  display: inline-block;
-}
-
-.sub-form__input {
-  min-height: 50px;
-  margin-right: 12px;
-  padding: 15px 15px;
-  outline: none;
-
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: transparent;
-
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-
-  color: $footer-lighter-60;
-}
-
-.sub-form__input::placeholder {
-  color: $footer-lighter-60;
-}
-
-.sub-form__label {
-  visibility: none;
-
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
-
-.footer__button--primary {
+.sub-button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   padding: 10px 30px;
-}
+  width: 200px;
+  height: 50px;
 
-.button__text {
-  display: inline-flex;
-  margin-bottom: 0;
-  margin-right: 10px;
+  &__text {
+    display: inline-flex;
+    margin-bottom: 0;
+    margin-right: 10px;
 
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
 
-  letter-spacing: 0.06em;
+    letter-spacing: 0.06em;
 
-  text-transform: none;
-}
+    text-transform: none;
+  }
 
-.button__sub-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  &__sub-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  fill: $lighter;
+    fill: $lighter;
+  }
 }
