--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -14,98 +14,99 @@
   margin-bottom: 50px;
 }
 
-.card-set--products {
-  @extend %list;
-  display: flex;
-  flex-wrap: wrap;
-}
+.card-set {
+  &--products {
+    @extend %list;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.card-set__item--product {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
+  &__item--product {
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
 
-.card-set__item--product:nth-child(3n) {
-  margin-right: 0;
-}
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
 
-.card-set__item--product:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .product {
   @extend %link;
   display: block;
   color: inherit;
-}
 
-.product__img {
-  display: block;
-}
+  &__img {
+    display: block;
+  }
 
-.product__thumb {
-  position: relative;
-  display: block;
-  overflow: hidden;
-}
+  &__thumb {
+    position: relative;
+    display: block;
+    overflow: hidden;
+  }
 
-.product__popup-text {
-  position: absolute;
+  &__popup-text {
+    position: absolute;
 
-  bottom: -100%;
-  padding: 63px 24px;
+    bottom: -100%;
+    padding: 63px 24px;
 
-  width: 100%;
-  height: 100%;
-  margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
 
-  background-color: rgba(33, 150, 243, 0.9);
-  color: $lighter;
+    background-color: rgba(33, 150, 243, 0.9);
+    color: $lighter;
 
-  transition: 250ms;
-  transition-property: bottom;
-  transition-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
-}
+    transition: 250ms;
+    transition-property: bottom;
+    transition-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
+  }
 
-.product__descr {
-  padding: 20px 24px;
+  &__descr {
+    padding: 20px 24px;
 
-  border: 1px solid $product-card-border;
-  border-top: none;
-}
+    border: 1px solid $product-card-border;
+    border-top: none;
+  }
 
-.product__title {
-  margin: 0;
+  &__title {
+    margin: 0;
 
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
 
-  color: $secondary-text-color;
-}
+    color: $secondary-text-color;
+  }
 
-.product__text {
-  margin: 0;
+  &__text {
+    margin: 0;
 
-  font-weight: inherit;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-}
+    font-weight: inherit;
+    font-size: 16px;
+    line-height: 1.9;
+    letter-spacing: 0.03em;
+  }
 
-.product:hover,
-.product:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
 
-.product:hover .product__popup-text,
-.product:focus .product__popup-text {
-  bottom: 0;
+    .product__popup-text {
+      bottom: 0;
+    }
+  }
 }
