--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,32 +1,22 @@
-.hero__section {
-  text-align: center;
-  padding: 200px 0;
+.hero {
+  &__section {
+    text-align: center;
+    padding: 200px 0;
 
-  background-color: $bg-dark;
-}
+    background-color: $bg-dark;
+  }
 
-.overlay {
-  max-width: 1600px;
-  max-height: 600px;
-  margin: -200px auto;
-  padding: inherit;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/hero-bg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
+  &__button--primary {
+    min-width: 200px;
+    padding: 10px 32px;
 
-.hero__button--primary {
-  min-width: 200px;
-  padding: 10px 32px;
+    border: none;
 
-  border: none;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+  }
 }
 
 .section__title--hero {
@@ -40,4 +30,16 @@
   text-transform: uppercase;
 
   color: $lighter;
+}
+
+.overlay {
+  max-width: 1600px;
+  max-height: 600px;
+  margin: -200px auto;
+  padding: inherit;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
